# fast_api_sync

./: .coverage  pyproject.toml
fast_api/: app.py
tests/: test_app.py
